[project]
name = "fast-context-mcp"
version = "1.0.0"
description = "AI-driven semantic code search as an MCP tool — powered by Windsurf's reverse-engineered SWE-grep protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
fast-context-mcp = "server:main"
